# music2db-client

./: LICENSE  README.md  config.yaml  pyproject.toml
config/: logging.yaml
src/: main.py  search_by_tags.py  show_metadata.py
src/music2db_client/: __init__.py  batch_processor.py  cli.py  config_loader.py  logging_setup.py  main.py  search_by_tags.py  settings.py  show_metadata.py  signals.py  utils.py
src/music2db_client/systemd/: __init__.py  install.sh  music2db-client.service  music2db.service
tests/: test_config_loader.py  test_main.py
