[project]
name = "music2db-client"
version = "0.3.1"
description = "Music metadata collection client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "kimiconfig>=0.2.7",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "mutagen>=1.47.0",
    "schedule>=1.2.0",
    "requests>=2.31.0",
]

[project.scripts]
music2db = "music2db_client.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["music2db_client*"]

[tool.setuptools.package-data]
music2db_client = ["systemd/*"]

[tool.uv]
index = [
    { url = "http://kimihome.lan:58080/simple/" }
]
